--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
     "name": "cashfree-api",
     "version": "1.0.0",
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
     },
     "dependencies": {
-      "next": "latest",
-      "react": "latest",
-      "react-dom": "latest"
+        "axios": "^1.12.2",
+        "mongodb": "^6.19.0",
+        "mongoose": "^8.18.1",
+        "next": "latest",
+        "nodemailer": "^7.0.6",
+        "react": "latest",
+        "react-dom": "latest"
     }
-  }
+}
+
   
